Added user entered links to be displayed on view with recycle ability

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".collect_link"
+            android:name=".LinkCollector"
             android:label="Link Collector"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:parentActivityName=".MainActivity">
