--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.Assignment1"
         tools:targetApi="31">
         <activity
+            android:name=".PrimeDirective"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".AboutMe"
             android:exported="false">
             <meta-data
@@ -28,10 +35,9 @@
         </activity>
         <activity
             android:name=".LinkCollector"
-            android:label="Link Collector"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:label="Link Collector"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
